allprojects {
    group = "edu.cursor"
    version = "1.0"
}

subprojects {
    apply plugin: "java"
    apply plugin: "maven-publish"

    sourceCompatibility = "17"
    compileJava.options.encoding = "UTF-8"
    compileTestJava.options.encoding = "UTF-8"
    javadoc.options.encoding = "UTF-8"

    repositories {
        mavenCentral()
    }

    ext.versions = [
        lombok: "1.18.24",
        slf4j: "2.0.3",
        logback: "1.4.4",
        junit5: "5.9.1",
        assertj: "3.23.1",
        mockito: "4.9.0",
        jacoco: "0.8.8",
        mysql: "8.0.31",
        pgsql: "42.5.1",
        mongo: "3.12.11",
        oracle: "21.7.0.0",
        annotation: "1.3.2",
        spring: "5.3.23",
        spring_boot: "2.7.5",
        snakeyaml: "1.33",
        protobuf: "3.21.9",
        jaxb_api: "2.3.1",
        guava: "31.1-jre",
        validation: "2.0.1.Final",
    ]

    ext.libraries = [
        lombok: "org.projectlombok:lombok:${versions.lombok}",
        slf4j_api: "org.slf4j:slf4j-api:${versions.slf4j}",
        logback_core: "ch.qos.logback:logback-core:${versions.logback}",
        logback_classic: "ch.qos.logback:logback-classic:${versions.logback}",
        junit5_core: "org.junit.jupiter:junit-jupiter:${versions.junit5}",
        junit5_api: "org.junit.jupiter:junit-jupiter-api:${versions.junit5}",
        junit5_params: "org.junit.jupiter:junit-jupiter-params:${versions.junit5}",
        assertj_core: "org.assertj:assertj-core:${versions.assertj}",
        mockito_core: "org.mockito:mockito-core:${versions.mockito}",
        jacoco: "org.jacoco:org.jacoco.agent:${versions.jacoco}",
        mysql: "mysql:mysql-connector-java:${versions.mysql}",
        pgsql: "org.postgresql:postgresql:${versions.pgsql}",
        mongo: "org.mongodb:mongo-java-driver:${versions.mongo}",
        oracle: "com.oracle.database.jdbc:ojdbc8:${versions.oracle}",
        spring_core: "org.springframework:spring-core:${versions.spring}",
        spring_beans: "org.springframework:spring-beans:${versions.spring}",
        spring_context: "org.springframework:spring-context:${versions.spring}",
        javax_annotation: "javax.annotation:javax.annotation-api:${versions.annotation}",
        spring_boot_starter_web: "org.springframework.boot:spring-boot-starter-web:${versions.spring_boot}",
        spring_boot_starter_test: "org.springframework.boot:spring-boot-starter-test:${versions.spring_boot}",
        spring_boot_starter_jpa: "org.springframework.boot:spring-boot-starter-data-jpa:${versions.spring_boot}",
        snakeyaml: "org.yaml:snakeyaml:${versions.snakeyaml}",
        protobuf: "com.google.protobuf:protobuf-java:${versions.protobuf}",
        jaxb_api: "javax.xml.bind:jaxb-api:${versions.jaxb_api}",
        guava: "com.google.guava:guava:${versions.guava}",
        validation: "javax.validation:validation-api:${versions.validation}",
    ]
}
